incremental and snapshot

--- a/models/raw/src_global_project.yml
+++ b/models/raw/src_global_project.yml
@@ -11,3 +11,5 @@ sources:
       - name: lookup_sex
       - name: lookup_year
       - name: group_fact
+      - name: incremental_lookup_sex
+      - name: lookup_area_new
